feat: aprimorar quiz com pontuacao ponderada